/*
 * $Id: ChangeLog,v 1.2340 2004/02/20 18:27:32 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-20 11:09 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrayshb.c
    ! Fixed memory leak in C Structure support.
    % Few optimizations in C Structure support.
      /* There are few more obvious optimizations to be done ASAP. */

2004-02-20 10:31 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/memvars.c
    * Removed dependancy on DEBUG_MEMORY_LEAKS #define.

  * source/vm/hvm.c
    * Replaced dependancy on DEBUG_MEMORY_LEAKS #define eith a R/T check of hb_xquery( HB_MEM_USEDMAX ).

  /*
     Now Memory Leaks will always be reported if fm.c is compiled with HH_FM_STATISTICS defined.
     No other source needs to be recompiled to enable complete memory statistics.
   */

2004-02-20 09:20 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/memofile.c
    ! Fixed to close file handle when file is empty.

2004-02-20 08:58 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/round.c
    % Optimized out usage of hb_itemNew() and hb_itemRelease()
    ! Fixed a memory leak.

2004-02-20 14:53 UTC+0100 Giancarlo Niccolai <gc [at] niccolai [dot] ws>
  * source/rtl/gtxvt/gtxvt.c
    ! GT window now appares in the middle of the screen in every WM.

2004-02-20 13:55 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rtl/filesys.c
   ! some \ in include changed to /

  * xharbour/source/rtl/soundex.c
   * clean C warning

  * xharbour/source/vm/errorapi.c
   * clear memory leak

  * xharbour/source/vm/itemapi.c
   * some small fixes for Clipper compatibility

2004-02-20 04:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makallvc.bat
  * makallbc.bat
    + contrib/xhwgui

2004-02-19 18:33 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/memvars.c