@@ -42,8 +42,10 @@ REQUEST BOF
 #define SB_CTL              2
 #define SB_BOTH             3
 
+#undef  HDM_GETITEMCOUNT
 #define HDM_GETITEMCOUNT    4608
 
+#undef  WM_MOUSEWHEEL
 #define WM_MOUSEWHEEL  0x020A
 
 static crossCursor := 0
